# srs-ik

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/right_tech_arm_description/lib/right_tech_arm_description/: robot_arm_control_node.py
log/: latest_build
src/right_tech_arm_description/: CMakeLists.txt  readme  setup.py
src/right_tech_arm_description/data_csv/: trans.py
src/right_tech_arm_description/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/right_tech_arm_description/install/right_tech_arm_description/lib/right_tech_arm_description/: robot_arm_control_node.py
src/right_tech_arm_description/install/right_tech_arm_description/share/right_tech_arm_description/: local_setup.sh  package.bash  package.ps1  package.sh  package.xml
src/right_tech_arm_description/install/right_tech_arm_description/share/right_tech_arm_description/cmake/: right_tech_arm_descriptionConfig.cmake
src/right_tech_arm_description/install/right_tech_arm_description/share/right_tech_arm_description/launch/: robot_arm_dual_control.launch.py  robot_description.launch.py
src/right_tech_arm_description/launch/: robot_arm_control_launch.py  robot_description.launch.py
src/right_tech_arm_description/log/: latest_build
src/right_tech_arm_description/meshes/: Link7.STL  base_link.STL
src/right_tech_arm_description/src/install/: local_setup.sh  setup.sh
src/right_tech_arm_description/src/log/: latest_build
src/right_tech_arm_description/urdf/: both_arm.urdf
(+7 files in other folders)
