<?xml version="1.0"?>
<package format="3">
  <name>right_tech_arm_description</name>
  <version>0.0.1</version>
  <description>Robot description package including URDF and meshes for the right tech arm</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- ROS 2 runtime dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>

  <!-- Dependencies for robot state and control -->
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>xacro</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
